<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dialog_title"
        style="@style/MyDialog.TitleText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:text="@string/alert" />

    <RelativeLayout
        android:id="@+id/layout_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/tv_dialog_content"
            style="@style/MyDialog.ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/shadow_height"
            android:background="@drawable/shadow_pattern" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_dialog_cancel"
            style="@style/MyDialog.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_dialog_ok"
            style="@style/MyDialog.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_height"
        android:background="@drawable/shadow_pattern" />

</LinearLayout>