<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_drawer_user_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_user_layout_height"
        android:paddingRight="@dimen/drawer_item_padding_right" >

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/iv_drawer_user"
            android:layout_width="@dimen/drawer_user_layout_height"
            android:layout_height="match_parent"
            android:padding="@dimen/drawer_image_padding"
            android:layout_marginLeft="@dimen/drawer_item_padding_left"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_drawer_user"
            android:layout_marginLeft="@dimen/drawer_item_padding_left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_drawer_user_name"
                style="@style/listTitleText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="name" />

            <TextView
                android:id="@+id/tv_drawer_user_info"
                style="@style/listSubTitleText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="user_info" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_drawer_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:background="@drawable/selector_drawer_layout"
        android:paddingLeft="@dimen/drawer_item_padding_left"
        android:paddingRight="@dimen/drawer_item_padding_right" >

        <TextView
            android:id="@+id/tv_drawer_home"
            style="@style/DrawerText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drawer_home" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/drawer_item_height"
            android:layout_alignParentRight="true"
            android:rotation="180"
            android:scaleType="center"
            android:src="@drawable/ic_action_previous_item" />

        <View
            android:id="@id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_drawer_near_by"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:background="@drawable/selector_drawer_layout"
        android:paddingLeft="@dimen/drawer_item_padding_left"
        android:paddingRight="@dimen/drawer_item_padding_right" >

        <TextView
            android:id="@+id/tv_drawer_near_by"
            style="@style/DrawerText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drawer_map" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/drawer_item_height"
            android:layout_alignParentRight="true"
            android:rotation="180"
            android:scaleType="center"
            android:src="@drawable/ic_action_previous_item" />

        <View
            android:id="@id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_drawer_direction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:background="@drawable/selector_drawer_layout"
        android:paddingLeft="@dimen/drawer_item_padding_left"
        android:paddingRight="@dimen/drawer_item_padding_right" >

        <TextView
            android:id="@+id/tv_drawer_direction"
            style="@style/DrawerText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drawer_search_address" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/drawer_item_height"
            android:layout_alignParentRight="true"
            android:rotation="180"
            android:scaleType="center"
            android:src="@drawable/ic_action_previous_item" />

        <View
            android:id="@id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>